src/objects/Insurance__c.object
<CustomObject>
    <fields>
        <fullName>Beneficiary_s_2__c</fullName>
        <label>Beneficiary(s)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Beneficiary_s__c</fullName>
        <label>Beneficiary(s)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Phone_2__c</fullName>
        <label>Company Phone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Company_Phone_3__c</fullName>
        <label>Company Phone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Company_Phone_4__c</fullName>
        <label>Company Phone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Company_Phone__c</fullName>
        <label>Company Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contract_Number_2__c</fullName>
        <label>Contract Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Number_3__c</fullName>
        <label>Contract Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Number_4__c</fullName>
        <label>Contract Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <label>Contract Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conversion_Option_Exp_Date__c</fullName>
        <label>Conversion Option &amp; Exp. Date</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Daily_or_Monthly_Benefit_Amount__c</fullName>
        <label>Daily or Monthly Benefit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Elimination_Period__c</fullName>
        <label>Elimination Period</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Face_Amount_2__c</fullName>
        <label>Face Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Face_Amount_Death_Benefit__c</fullName>
        <label>Face Amount / Death Benefit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Guaranteed_Death_Benefit__c</fullName>
        <label>Guaranteed Death Benefit?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Home_Health_Wiaver__c</fullName>
        <label>Home Health Wiaver</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Household_Insurance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Household</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Insurance</relationshipLabel>
        <relationshipName>Insurance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>If_VUL_investment_portfolio_holdings__c</fullName>
        <label>If VUL: investment portfolio holdings</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_YES_until_what_age__c</fullName>
        <label>If YES, until what age?</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inflation_adjustments__c</fullName>
        <label>Inflation Adjustments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Company_2__c</fullName>
        <label>Insurance Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Company_3__c</fullName>
        <label>Insurance Company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Company_4__c</fullName>
        <label>Insurance Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Company__c</fullName>
        <label>Insurance Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Insurance</relationshipLabel>
        <relationshipName>Insurance</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Is_benefit_taxable_or_tax_free__c</fullName>
        <label>Is benefit taxable or tax free?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Taxable</fullName>
                </value>
                <value>
                    <fullName>Tax Free</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue_Date_2__c</fullName>
        <label>Issue Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Issue_Date_3__c</fullName>
        <label>Issue Date 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Issue_Date_4__c</fullName>
        <label>Issue Date 4</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Issue_Date__c</fullName>
        <label>Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legacy Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Insurance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_Date__c</fullName>
        <label>Legacy Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_Id__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Length_of_Term__c</fullName>
        <inlineHelpText>Length of Term / Policy Expiration Date</inlineHelpText>
        <label>Length of Term/Exp. Date</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Benefit_Max_Age__c</fullName>
        <label>Monthly Benefit &amp; Max Age</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Name_of_Insured_Person_2__c</fullName>
        <label>Name of Insured Person</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Insured_Person_3__c</fullName>
        <label>Name of Insured Person</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Insured_Person_4__c</fullName>
        <label>Name of Insured Person</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Insured_Person__c</fullName>
        <label>Name of Insured Person</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes_2__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Notes_3__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Notes_4__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Partnership_Eligible__c</fullName>
        <label>Partnership Eligible</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Owner_2__c</fullName>
        <label>Policy Owner 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Owner_3__c</fullName>
        <label>Policy Owner 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Owner_4__c</fullName>
        <label>Policy Owner 4</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Owner__c</fullName>
        <label>Policy Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_type__c</fullName>
        <inlineHelpText>UL, VUL, Whole Life</inlineHelpText>
        <label>Policy Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premium_2__c</fullName>
        <label>Premium $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Premium_3__c</fullName>
        <label>Premium $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Premium_4__c</fullName>
        <label>Premium $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Premium_Mode_2__c</fullName>
        <label>Premium Mode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premium_Mode_3__c</fullName>
        <label>Premium Mode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premium_Mode_4__c</fullName>
        <label>Premium Mode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premium_Mode__c</fullName>
        <inlineHelpText>monthly, quarterly, etc</inlineHelpText>
        <label>Premium Mode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premium__c</fullName>
        <label>Premium $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Policy_Name_2__c</fullName>
        <label>Product/Policy Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Policy_Name_3__c</fullName>
        <label>Product/Policy Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Policy_Name_4__c</fullName>
        <label>Product/Policy Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Policy_Name__c</fullName>
        <label>Product/Policy Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Riders_4__c</fullName>
        <inlineHelpText>return of premium, etc</inlineHelpText>
        <label>Riders?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Riders__c</fullName>
        <inlineHelpText>FIO, etc</inlineHelpText>
        <label>Riders?</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shared_Care__c</fullName>
        <label>Shared Care</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Underwriting_Class_1__c</fullName>
        <label>Underwriting Class</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Underwriting_Class_2__c</fullName>
        <label>Underwriting Class</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Underwriting_Class_3__c</fullName>
        <label>Underwriting Class</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>of_Days_in_Pool__c</fullName>
        <label># of Days in Pool</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Insurance</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Insurance_Contact__c</columns>
        <columns>Household_Insurance__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>Company_Phone__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>File Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insurance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>